Обновление информархива. Пока без содержания.

--- a/informarch/aeroqsp_instr_0025.html
+++ b/informarch/aeroqsp_instr_0025.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <link id="favicon" rel="icon" type="image/x-icon" href="../res/favicon.ico" />
     <link type="text/css" rel="stylesheet" href="../res/css/easy.library.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/offline.window.css" />
@@ -14,45 +15,95 @@
         <div class="em_AROUND">
             <h1>ИнформАрхив QSP</h1>
             <!-- body start -->
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html" class="emHREFTT">&lt; Назад, к странице 24</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html" class="emHREFTT">Вперёд, к странице 26 &gt;</a></div></div>
-<a id="informarch_aeroqsp_instr"></a><h2>Инструкция по использованию AeroQSP совместно с Quest Generator</h2>
-<ol>
-<li>
-Скачиваем https://qsp.org/misc/aero/aerodev.zip
-</li>
-<li>
-Скачиваем https://qsp.org/attachments/aeroshell.zip
-</li>
-<li>
-Черновик документации по новым фичам - https://qsp.org/misc/aero/help.htm
-</li>
-<li>
-В файле "run_flash.bat" из "aerodev.zip" редактируем путь к "AeroQSP.exe" - AEROQSP.
-</li>
-<li>
-В QGen указываем вместо "qspgui.exe" - файл "run_flash.bat"
-</li>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html" class="emHREFTT">&lt; Назад, к странице 38</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html" class="emHREFTT">Вперёд, к странице 40 &gt;</a></div></div>
+<h6 id="informarch_aeroqsp_instr">Инструкция по использованию AeroQSP совместно с Quest Generator</h6><ol>
+<li>Скачиваем https://qsp.org/misc/aero/aerodev.zip</li>
+<li>Скачиваем https://qsp.org/attachments/aeroshell.zip</li>
+<li>Черновик документации по новым фичам - https://qsp.org/misc/aero/help.htm</li>
+<li>В файле "run_flash.bat" из "aerodev.zip" редактируем путь к "AeroQSP.exe" - AEROQSP.</li>
+<li>В QGen указываем вместо "qspgui.exe" - файл "run_flash.bat"</li>
 </ol>
 <p>
 Для игр нужно создавать отдельные папки - при запуске всё содержимое папки с игрой архивируется в ZIP и ссылка передается в "AeroQSP.exe".
-
 </p>
 <p>
 При запуске "run_flash.bat" вручную, необходимо указывать полный путь к файлу с игрой (".qsp"). Например, run_flash.bat "d:\aero\file.qsp"
-
 </p>
 <p>
 Для работы Aeroshell требуется предустановленный плагин Flash для Internet Explorer. Брать здесь: http://get.adobe.com/ru/flashplayer/otherversions
-
 </p>
-<a id="тAqa"></a><h5>Примечание Aleks Versus:</h5>
-<blockquote>
+<h6 id="primechanie-aleks-versus">Примечание Aleks Versus:</h6><blockquote>
 <p>
-AeroQSP — плеер, работающий на устаревшей и отжившей своё технологии Flash. Adobe прекратила поддержку данной технологии, что означает, что AeroQSP стало невозможно использовать. Игры AeroQSP можно пробовать запустить на <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004#qspider_0120" style="text-decoration:none;" class="emFOLD">qSpider</a>, но это так же потребует танцев с бубнами. Лучше писать игры сразу для qSpider, не уповая на то, что он поддерживает AeroQSP.
-</p>
-
+AeroQSP — плеер, работающий на устаревшей и отжившей своё технологии Flash. Adobe прекратила поддержку данной технологии, что означает, что AeroQSP стало невозможно использовать. Игры AeroQSP можно пробовать запустить на <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004#qspider_0120" style="text-decoration:none;" class="emFOLD">qSpider</a>, но это так же потребует танцев с бубнами. Лучше писать игры сразу для qSpider, не уповая на то, что он поддерживает AeroQSP.</p>
 </blockquote>
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html" class="emHREFTT">&lt; Назад, к странице 24</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html" class="emHREFTT">Вперёд, к странице 26 &gt;</a></div></div>
+<p>
+Следующий раздел перенесён из справочника по самым часто задаваемым вопросам.
+</p>
+<h6 id="faq_24_01">24.1. Как сделать так, чтобы AeroQSP запускался прямо из Quest Generator?</h6><p>
+В: Как сделать так, чтобы AeroQSP запускался прямо из Quest Generator?
+</p>
+<p>
+О:
+</p>
+<p>
+Всё довольно просто. Вам необходимо воспользоваться инструкцией по этой ссылке https://qsp.org/misc/aero/readme.txt
+</p>
+<p>
+Если что-то не получается, от себя лично могу посоветовать следующее:
+</p>
+<ol>
+<li><p>
+Скачайте все три архива по этим ссылкам:</p>
+<ul>
+<li><a href="https://qsp.org/attachments/aeroshell.zip" style="text-decoration:none;" class="emFOLD">AeroShell</a></li>
+<li><a href="https://qsp.org/misc/aero/aerodev.zip" style="text-decoration:none;" class="emFOLD">AeroDev</a></li>
+<li><a href="https://qsp.org/attachments/qgen400b1.zip" style="text-decoration:none;" class="emFOLD">QGen 4.0.0b</a></li>
+</ul>
+</li>
+<li>Распакуйте их содержимое в одну папку</li>
+<li><p>
+Откройте файл "run_flash.bat" с помощью любого текстового редактора, найдите строку, содержащую `SET AEROQSP=` и после знака равенства замените путь к файлу "AeroQSP.exe" просто на "AeroQSP.exe", так как сейчас файл плеера лежит в той же папке, что и "run_flash.bat". То есть теперь строка должна выглядеть так:</p>
+<div class="Monokai-Code">
+SET&nbsp;AEROQSP=AeroQSP.exe
+</div>
+</li>
+<li>Откройте Quest Generator, зайдите в меню "Утилиты", выберите пункт "Настройки...", откройте вкладку "Пути"</li>
+<li>Здесь рядом с полем "Путь к плееру" нажмите на кнопку "Выбрать путь...". Откроется окно, которое будет предлагать вам указать на файл, который нужно использовать как плеер.</li>
+<li>Вместо типа файла "Файл плеера (<em>.exe)", укажите "Все файлы (</em>.*)". Вам станет доступным файл "run_flash.bat", нажмите на него и нажмите кнопку "открыть". После этого окно настроек можно закрывать нажатием "Ок".</li>
+<li>Создайте локацию, напишите на ней пару команд для проверки (чтоб выводился текст, действие, предмет и т.п.), затем сохраните игру в ОТДЕЛЬНОЙ папке</li>
+<li>Запустите игру нажатием кнопки "Запустить игру" в Quest Generator или клавиши "F5" на клавиатуре. После того, как на экране пройдут различные команды, запустится оболочка AeroQSP. Убедитесь, что игра работает.</li>
+</ol>
+<p>
+Если оболочка AeroQSP не запустится, или запустится с чёрным экраном, обновите версию флеш-плеера
+</p>
+<h6 id="link_24_01">23.1.  Как сделать так, чтобы AeroQSP запускался прямо из Quest Generator?</h6><p>
+Смотреть ответ на ютубе: <a href="https://youtu.be/UqcQhd-HFzw" style="text-decoration:none;" class="emFOLD">https://youtu.be/UqcQhd-HFzw</a>
+</p>
+<p>
+NickoAilus. #5647 18.Май.19 10:50:55: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=226&prc=25&Itemid=57#p25202" style="text-decoration:none;" class="emFOLD">Что надо сделать с QGen, чтобы он заработал на AeroQSP?</a>
+</p>
+<p>
+Инструкция по работе с AeroQSP: <a href="https://qsp.org/misc/aero/help.htm" style="text-decoration:none;" class="emFOLD">https://qsp.org/misc/aero/help.htm</a>
+</p>
+<p>
+Инструкция по запуску AeroQSP из QGen: <a href="https://qsp.org/misc/aero/readme.txt" style="text-decoration:none;" class="emFOLD">https://qsp.org/misc/aero/readme.txt</a>
+</p>
+<p>
+Запуск AeroQSP из Quest Generator: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=297&Itemid=57" style="text-decoration:none;" class="emFOLD">Тема на форуме QSP.su</a>
+</p>
+<p>
+Stand-alone сборка на AeroQSP: <a href="https://qsp.org/index.php?option=com_content&view=article&id=117&Itemid=56" style="text-decoration:none;" class="emFOLD">статья на QSP.su</a>
+</p>
+<p>
+Lisichka. #3849 05.Фев.16 00:51:59: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=154&prc=25&Itemid=57#p22877" style="text-decoration:none;" class="emFOLD">можно ли как-то в аэру добавить второе окно доп описания?</a>
+</p>
+<p>
+Mira. #4952 28.Фев.17 22:49:27: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=199&prc=25&Itemid=57#p25311" style="text-decoration:none;" class="emFOLD">Создала на аеро свой хелоуворд, через standalone не работает, swf создается, грузится и черный экран дальше</a>
+</p>
+<p>
+BlooDwareN. #5182 10.Янв.18 22:00:22: <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=40&p=208&prc=25&Itemid=57#p26298" style="text-decoration:none;" class="emFOLD">как установить AeroQSP!</a>
+</p>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html" class="emHREFTT">&lt; Назад, к странице 38</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html" class="emHREFTT">Вперёд, к странице 40 &gt;</a></div></div>
 <!-- body end -->
             <div class="em_Epigraph">
                 <div class="em_subText">
@@ -75,124 +126,7 @@ AeroQSP — плеер, работающий на устаревшей и отж
     </div>
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
-<a id="informarch_soderzhanije"></a><h2>Содержание</h2>
-<a id="ъqна"></a><h3>Большой сборник полезных ссылок и закладок</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
-</li>
-</ul>
-<a id="КЯgР"></a><h3>Что такое QSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/informatsija_o_qsp_0002.html#informarch_qspinfo" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
-</li>
-</ul>
-<a id="Ybкф"></a><h3>Общие вопросы и решения</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/lokalizatsija_qsp_0005.html#informarch_localization" style="text-decoration:none;" class="emFOLD">Локализация классического плеера версии 5.7.0</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html#informarch_analyzer_qsp" style="text-decoration:none;" class="emFOLD">Анализатор кода</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
-</li>
-</ul>
-<a id="иbКw"></a><h3>Продвинутый QSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
-</li>
-</ul>
-<a id="Фымy"></a><h3>Работа в текстовом редакторе</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/rabota_v_tekstovom_redaktore_0011.html#informarch_game_in_texteditor" style="text-decoration:none;" class="emFOLD">Пишем QSP-игру в текстовом редакторе</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/preprotsessor_0012.html#informarch_txt2gam_preprocessor" style="text-decoration:none;" class="emFOLD">Использование препроцессора</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
-</li>
-</ul>
-<a id="HБыU"></a><h3>Вопросы по программированию</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/game_time_0015.html#informarch_gametime" style="text-decoration:none;" class="emFOLD">Игровое время (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/gibkij_plejlist_0016.html#informarch_flexible_playlist" style="text-decoration:none;" class="emFOLD">Гибкий плейлист (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html#informarch_usethemassive" style="text-decoration:none;" class="emFOLD">Использование массивов</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/dopolnenie_inventarja_0018.html#informarch_ia_lib_ntropy" style="text-decoration:none;" class="emFOLD">Библиотечка дополняющая инвентарь 0.76</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html#informarch_ifacts" style="text-decoration:none;" class="emFOLD">Действие по условию</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/plavnoe_izmenenie_0020.html#informarch_transformation" style="text-decoration:none;" class="emFOLD">Плавное изменение цвета фона (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html#informarch_debugger20" style="text-decoration:none;" class="emFOLD">Отладчик 2.0 beta</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
-</li>
-</ul>
-<a id="ХNуA"></a><h3>Обновления плеера</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
-</li>
-</ul>
-<a id="xBfq"></a><h3>Вопросы по AeroQSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_instr_0025.html#informarch_aeroqsp_instr" style="text-decoration:none;" class="emFOLD">Инструкция по использованию AeroQSP совместно с Quest Generator</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html#informarch_aeroqsp_help" style="text-decoration:none;" class="emFOLD">Справка по AeroQSP (в дополнение к основной справке QSP)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_aeroqsp_0027.html#informarch_standalone_aeroqsp" style="text-decoration:none;" class="emFOLD">Stand-alone сборка игр на AeroQSP</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
-</li>
-</ul>
-<a id="PxцТ"></a><h3>Обзоры игр</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
-</li>
-</ul>
+<header-header></header-header>
         </div>
     </div>
     <script type="text/javascript" src="../res/js/text_replace.js"></script>
