--- a/informarch/obnovlenie_do_5.7.0_0023.html
+++ b/informarch/obnovlenie_do_5.7.0_0023.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <link id="favicon" rel="icon" type="image/x-icon" href="../res/favicon.ico" />
     <link type="text/css" rel="stylesheet" href="../res/css/easy.library.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/offline.window.css" />
@@ -14,90 +15,52 @@
         <div class="em_AROUND">
             <h1>ИнформАрхив QSP</h1>
             <!-- body start -->
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html" class="emHREFTT">&lt; Назад, к странице 22</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html" class="emHREFTT">Вперёд, к странице 24 &gt;</a></div></div>
-<a id="informarch_update570"></a><h2>Обновление QSP (5.7.0) и QGen (4.0.0b)</h2>
-<p>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/modal_window_0043.html" class="emHREFTT">&lt; Назад, к странице 36</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html" class="emHREFTT">Вперёд, к странице 38 &gt;</a></div></div>
+<h6 id="informarch_update570">Обновление QSP (5.7.0) и QGen (4.0.0b)</h6><p>
 У нас много новостей.
-
 </p>
 <p>
 Во-первых, QSP 5.7.0:
-
 </p>
 <ol>
-<li>
-Новое ключевое слово ELSEIF: теперь можно гораздо удобнее записывать условия со множественным выбором.
-</li>
-<li>
-Новая функция LOC: проверяет существование указанной локации (аналогично OBJ для предметов).
-</li>
-<li>
-Небольшое изменение функции DYNEVAL: теперь она выполняет код, возвращая значение, указанное в переменной RESULT/$RESULT.
-</li>
-<li>
-Новые скобки для динамически исполняемого кода, поддерживающие вложенность.
-</li>
-<li>
-Улучшена нумерация строк для сообщений об ошибках.
-</li>
-<li>
-Улучшения оператора COPYARR: можно указывать начальный индекс и количество элементов для копирования.
-</li>
-<li>
-Восстановлена передача аргументов от GT/XGT в обработчик $ONNEWLOC.
-</li>
-<li>
-Кеширование операторов (фактически, частичная прекомпиляция кода).
-</li>
-<li>
-Содержимое буфера обмена сохраняется при закрытии плеера.
-</li>
-<li>
-Перевод интерфейса на немецкий.
-</li>
+<li>Новое ключевое слово ELSEIF: теперь можно гораздо удобнее записывать условия со множественным выбором.</li>
+<li>Новая функция LOC: проверяет существование указанной локации (аналогично OBJ для предметов).</li>
+<li>Небольшое изменение функции DYNEVAL: теперь она выполняет код, возвращая значение, указанное в переменной RESULT/$RESULT.</li>
+<li>Новые скобки для динамически исполняемого кода, поддерживающие вложенность.</li>
+<li>Улучшена нумерация строк для сообщений об ошибках.</li>
+<li>Улучшения оператора COPYARR: можно указывать начальный индекс и количество элементов для копирования.</li>
+<li>Восстановлена передача аргументов от GT/XGT в обработчик $ONNEWLOC.</li>
+<li>Кеширование операторов (фактически, частичная прекомпиляция кода).</li>
+<li>Содержимое буфера обмена сохраняется при закрытии плеера.</li>
+<li>Перевод интерфейса на немецкий.</li>
 </ol>
 <p>
 Также выпущена первая бета-версия QGen. По сравнению с последней альфа-версией:
-
 </p>
 <ol>
-<li>
-Улучшена стабильность работы.
-</li>
-<li>
-Добавлена мультиязычность (пока что русский/английский).
-</li>
-<li>
-Ключевые слова и краткие подсказки вынесены во внешний xml-файл.
-</li>
-<li>
-Поддержка изменений в QSP 5.7.0
-</li>
+<li>Улучшена стабильность работы.</li>
+<li>Добавлена мультиязычность (пока что русский/английский).</li>
+<li>Ключевые слова и краткие подсказки вынесены во внешний xml-файл.</li>
+<li>Поддержка изменений в QSP 5.7.0</li>
 </ol>
 <p>
 Обновлен TXT2GAM: поддержка изменений в QSP 5.7.0
-
 </p>
 <p>
 Улучшена справка по AeroQSP: https://qsp.org/misc/aero/help.htm
-
 </p>
 <p>
 Скачать всё можно на странице <a href="https://qsp.org/index.php?option=com_content&view=article&id=57&Itemid=56" style="text-decoration:none;" class="emFOLD">"Разработчикам"</a>. 
-
 </p>
 <p>
-АВТОР: BYTE   
-
+Автор: `BYTE`
 </p>
 <p>
 13.06.2010 22:39
-
 </p>
 <p>
-Оригинал статьи: https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=103&amp;catid=42
-</p>
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html" class="emHREFTT">&lt; Назад, к странице 22</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html" class="emHREFTT">Вперёд, к странице 24 &gt;</a></div></div>
+Оригинал статьи: https://qsp.org/index.php?option=com_content&view=article&id=103&catid=42</p>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/modal_window_0043.html" class="emHREFTT">&lt; Назад, к странице 36</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html" class="emHREFTT">Вперёд, к странице 38 &gt;</a></div></div>
 <!-- body end -->
             <div class="em_Epigraph">
                 <div class="em_subText">
@@ -120,124 +83,7 @@
     </div>
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
-<a id="informarch_soderzhanije"></a><h2>Содержание</h2>
-<a id="ъqна"></a><h3>Большой сборник полезных ссылок и закладок</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
-</li>
-</ul>
-<a id="КЯgР"></a><h3>Что такое QSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/informatsija_o_qsp_0002.html#informarch_qspinfo" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
-</li>
-</ul>
-<a id="Ybкф"></a><h3>Общие вопросы и решения</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/lokalizatsija_qsp_0005.html#informarch_localization" style="text-decoration:none;" class="emFOLD">Локализация классического плеера версии 5.7.0</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html#informarch_analyzer_qsp" style="text-decoration:none;" class="emFOLD">Анализатор кода</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
-</li>
-</ul>
-<a id="иbКw"></a><h3>Продвинутый QSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
-</li>
-</ul>
-<a id="Фымy"></a><h3>Работа в текстовом редакторе</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/rabota_v_tekstovom_redaktore_0011.html#informarch_game_in_texteditor" style="text-decoration:none;" class="emFOLD">Пишем QSP-игру в текстовом редакторе</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/preprotsessor_0012.html#informarch_txt2gam_preprocessor" style="text-decoration:none;" class="emFOLD">Использование препроцессора</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
-</li>
-</ul>
-<a id="HБыU"></a><h3>Вопросы по программированию</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/game_time_0015.html#informarch_gametime" style="text-decoration:none;" class="emFOLD">Игровое время (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/gibkij_plejlist_0016.html#informarch_flexible_playlist" style="text-decoration:none;" class="emFOLD">Гибкий плейлист (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html#informarch_usethemassive" style="text-decoration:none;" class="emFOLD">Использование массивов</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/dopolnenie_inventarja_0018.html#informarch_ia_lib_ntropy" style="text-decoration:none;" class="emFOLD">Библиотечка дополняющая инвентарь 0.76</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html#informarch_ifacts" style="text-decoration:none;" class="emFOLD">Действие по условию</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/plavnoe_izmenenie_0020.html#informarch_transformation" style="text-decoration:none;" class="emFOLD">Плавное изменение цвета фона (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html#informarch_debugger20" style="text-decoration:none;" class="emFOLD">Отладчик 2.0 beta</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
-</li>
-</ul>
-<a id="ХNуA"></a><h3>Обновления плеера</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
-</li>
-</ul>
-<a id="xBfq"></a><h3>Вопросы по AeroQSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_instr_0025.html#informarch_aeroqsp_instr" style="text-decoration:none;" class="emFOLD">Инструкция по использованию AeroQSP совместно с Quest Generator</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html#informarch_aeroqsp_help" style="text-decoration:none;" class="emFOLD">Справка по AeroQSP (в дополнение к основной справке QSP)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_aeroqsp_0027.html#informarch_standalone_aeroqsp" style="text-decoration:none;" class="emFOLD">Stand-alone сборка игр на AeroQSP</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
-</li>
-</ul>
-<a id="PxцТ"></a><h3>Обзоры игр</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
-</li>
-</ul>
+<header-header></header-header>
         </div>
     </div>
     <script type="text/javascript" src="../res/js/text_replace.js"></script>
