--- a/informarch/polka_igr_0007.html
+++ b/informarch/polka_igr_0007.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <link id="favicon" rel="icon" type="image/x-icon" href="../res/favicon.ico" />
     <link type="text/css" rel="stylesheet" href="../res/css/easy.library.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/offline.window.css" />
@@ -14,94 +15,58 @@
         <div class="em_AROUND">
             <h1>ИнформАрхив QSP</h1>
             <!-- body start -->
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html" class="emHREFTT">&lt; Назад, к странице 6</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html" class="emHREFTT">Вперёд, к странице 8 &gt;</a></div></div>
-<a id="informarch_gameshelf"></a><h2>Полка игр</h2>
-<a id="informarch_gameshelf_todo"></a><h3>Что должно быть реализовано в полке игр</h3>
-<p>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html" class="emHREFTT">&lt; Назад, к странице 7</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/rasprostranjaemaja_standalon_sborka_na_klassike_0031.html" class="emHREFTT">Вперёд, к странице 9 &gt;</a></div></div>
+<h5 id="informarch_gameshelf">Полка игр</h5><h5 id="informarch_gameshelf_todo">Что должно быть реализовано в полке игр</h5><p>
 Обсуждали недавно с elmortem, каким бы хотелось видеть Classic-плеер в плане работы с играми. Вот к чему пришли.
-
 </p>
 <p>
 В HTMLTads есть "полка игр" - страница, которая появляется при запуске плеера(т.е. не при открытии конкретной игры, а при самостоятельном запуске), на которой содержатся ссылки на игры, открытые когда-либо игроком. Просто и удобно, открыл плеер, тыкнул на название игры, игра запустилась. Не надо даже в меню лезть.
-
 </p>
 <p>
 Вот такую "полку игр" хотелось бы видеть в Classic QSP, но этого - мало.
-
 </p>
 <p>
 Времена медленного интернета прошли, приложения все теснее интегрируются с Web, поэтому:
-
 </p>
 <p>
 Хотелось бы также видеть на "стартовой страничке" также список игр с сайта - Новые, Популярные, и т.д., в т.ч. список обновлений для уже установленных в системе игр, и ссылку на обновление версии плеера, если оно требуется. Возможно, это следует реализовать не отдельными списками, а одним с переключаемыми сортировками.
-
 </p>
 <p>
 Возможно, к этому добавится что-то еще - например, ссылки на новости сайта, комментарии к играм или сообщения на форуме.
-
 </p>
 <p>
 При такой интерактивной странице "Набор игрока"(напомню, он был введен временно) уже не будет нужен - будет просто инсталлятор плеера, в котором будет "стартовая страница", с которой можно будет загрузить и обновить любую игру одним кликом мышки.
-
 </p>
 <p>
 "Набор игрока" будет упразднен, в будущем он заменится "Коллекциями игр", т.е. списками, составленными по какому-то критерию. Например, серия "Боевики", "Фэнтези", "РПГ", "Ужасы". Возможно, это будет реализовано через теги для игр, которые все еще в планах.
-
 </p>
 <p>
 Разумеется, весь онлайн-контент нужно будет сделать с возможностью отключения в настройках. Одной галочки, пожалуй, будет достаточно. Само собой, при обновлении страницы он не должен блокировать доступ к списку локально загруженных игр.
-
 </p>
-<a id="informarch_gameshelf_pluses"></a><h4>Плюсы:</h4>
-<ul>
-<li>
-Игрок всегда в курсе выхода новых игр и обновлений плеера.
-</li>
-<li>
-Любую игру, в которую он играл, можно сразу запустить одним кликом.
-</li>
-<li>
-Публикация информации с сайта в плеере(новости, сообщения на форуме, комментарии к играм) привлечет дополнительное внимание игрока к сайту.
-</li>
-<li>
-Процесс скачивания-запуска игры максимально упростится.
-</li>
-<li>
-Обновить игру до последней версии станет очень просто, и не нужно будет следить за обновлениями - плеер сам будет предлагать обновить игру.
-</li>
-<li>
-Можно будет примерно оценивать активную аудиторию игроков по статистике запросов со "стартовых страниц".
-</li>
+<h5 id="informarch_gameshelf_pluses">Плюсы:</h5><ul>
+<li>Игрок всегда в курсе выхода новых игр и обновлений плеера.</li>
+<li>Любую игру, в которую он играл, можно сразу запустить одним кликом.</li>
+<li>Публикация информации с сайта в плеере(новости, сообщения на форуме, комментарии к играм) привлечет дополнительное внимание игрока к сайту.</li>
+<li>Процесс скачивания-запуска игры максимально упростится.</li>
+<li>Обновить игру до последней версии станет очень просто, и не нужно будет следить за обновлениями - плеер сам будет предлагать обновить игру.</li>
+<li>Можно будет примерно оценивать активную аудиторию игроков по статистике запросов со "стартовых страниц".</li>
 </ul>
-<a id="informarch_gameshelf_needs"></a><h3>Требования к играм для попадания в полку игр на Android-плеере</h3>
-<p>
+<h5 id="informarch_gameshelf_needs">Требования к играм для попадания в полку игр на Android-плеере</h5><p>
 Требования, которым должна соответствовать игра, чтобы у игрока была возможность нормально играть в нее через "полку игр".
-
 </p>
 <ul>
-<li>
-Игра должна быть упакована в архив zip.
-</li>
-<li>
-Главный(запускаемый) .qsp-файл должен находиться в корне архива, а не во вложенных папках.
-</li>
-<li>
-На одном уровне с главным .qsp-файлом не должно находиться других .qsp-файлов
-</li>
-<li>
-В архиве не должно быть папок и файлов с русскими буквами в имени.
-</li>
+<li>Игра должна быть упакована в архив zip.</li>
+<li>Главный(запускаемый) .qsp-файл должен находиться в корне архива, а не во вложенных папках.</li>
+<li>На одном уровне с главным .qsp-файлом не должно находиться других .qsp-файлов</li>
+<li>В архиве не должно быть папок и файлов с русскими буквами в имени.</li>
 </ul>
 <p>
-Автор: <span class="em_BLCK">Nex</span>
-
+Автор: `Nex`
 </p>
 <p>
 26.Сен.10 11:29:12
-
 </p>
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html" class="emHREFTT">&lt; Назад, к странице 6</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html" class="emHREFTT">Вперёд, к странице 8 &gt;</a></div></div>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html" class="emHREFTT">&lt; Назад, к странице 7</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/rasprostranjaemaja_standalon_sborka_na_klassike_0031.html" class="emHREFTT">Вперёд, к странице 9 &gt;</a></div></div>
 <!-- body end -->
             <div class="em_Epigraph">
                 <div class="em_subText">
@@ -124,124 +89,7 @@
     </div>
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
-<a id="informarch_soderzhanije"></a><h2>Содержание</h2>
-<a id="ъqна"></a><h3>Большой сборник полезных ссылок и закладок</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
-</li>
-</ul>
-<a id="КЯgР"></a><h3>Что такое QSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/informatsija_o_qsp_0002.html#informarch_qspinfo" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
-</li>
-</ul>
-<a id="Ybкф"></a><h3>Общие вопросы и решения</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/lokalizatsija_qsp_0005.html#informarch_localization" style="text-decoration:none;" class="emFOLD">Локализация классического плеера версии 5.7.0</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html#informarch_analyzer_qsp" style="text-decoration:none;" class="emFOLD">Анализатор кода</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
-</li>
-</ul>
-<a id="иbКw"></a><h3>Продвинутый QSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
-</li>
-</ul>
-<a id="Фымy"></a><h3>Работа в текстовом редакторе</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/rabota_v_tekstovom_redaktore_0011.html#informarch_game_in_texteditor" style="text-decoration:none;" class="emFOLD">Пишем QSP-игру в текстовом редакторе</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/preprotsessor_0012.html#informarch_txt2gam_preprocessor" style="text-decoration:none;" class="emFOLD">Использование препроцессора</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
-</li>
-</ul>
-<a id="HБыU"></a><h3>Вопросы по программированию</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/game_time_0015.html#informarch_gametime" style="text-decoration:none;" class="emFOLD">Игровое время (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/gibkij_plejlist_0016.html#informarch_flexible_playlist" style="text-decoration:none;" class="emFOLD">Гибкий плейлист (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html#informarch_usethemassive" style="text-decoration:none;" class="emFOLD">Использование массивов</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/dopolnenie_inventarja_0018.html#informarch_ia_lib_ntropy" style="text-decoration:none;" class="emFOLD">Библиотечка дополняющая инвентарь 0.76</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html#informarch_ifacts" style="text-decoration:none;" class="emFOLD">Действие по условию</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/plavnoe_izmenenie_0020.html#informarch_transformation" style="text-decoration:none;" class="emFOLD">Плавное изменение цвета фона (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html#informarch_debugger20" style="text-decoration:none;" class="emFOLD">Отладчик 2.0 beta</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
-</li>
-</ul>
-<a id="ХNуA"></a><h3>Обновления плеера</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
-</li>
-</ul>
-<a id="xBfq"></a><h3>Вопросы по AeroQSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_instr_0025.html#informarch_aeroqsp_instr" style="text-decoration:none;" class="emFOLD">Инструкция по использованию AeroQSP совместно с Quest Generator</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html#informarch_aeroqsp_help" style="text-decoration:none;" class="emFOLD">Справка по AeroQSP (в дополнение к основной справке QSP)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_aeroqsp_0027.html#informarch_standalone_aeroqsp" style="text-decoration:none;" class="emFOLD">Stand-alone сборка игр на AeroQSP</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
-</li>
-</ul>
-<a id="PxцТ"></a><h3>Обзоры игр</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
-</li>
-</ul>
+<header-header></header-header>
         </div>
     </div>
     <script type="text/javascript" src="../res/js/text_replace.js"></script>
