--- a/informarch/tjanem_karty_iz_kollody_0022.html
+++ b/informarch/tjanem_karty_iz_kollody_0022.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <link id="favicon" rel="icon" type="image/x-icon" href="../res/favicon.ico" />
     <link type="text/css" rel="stylesheet" href="../res/css/easy.library.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/offline.window.css" />
@@ -14,76 +15,64 @@
         <div class="em_AROUND">
             <h1>ИнформАрхив QSP</h1>
             <!-- body start -->
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html" class="emHREFTT">&lt; Назад, к странице 21</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html" class="emHREFTT">Вперёд, к странице 23 &gt;</a></div></div>
-<a id="informarch_randomizer"></a><h2>Выбор случайных вариантов - тянем карты из колоды [1.0]</h2>
-<p>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html" class="emHREFTT">&lt; Назад, к странице 23</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/shablony_oformlenija_dlja_igr_0032.html" class="emHREFTT">Вперёд, к странице 25 &gt;</a></div></div>
+<h5 id="informarch_randomizer">Выбор случайных вариантов - тянем карты из колоды [1.0]</h5><p>
 Если требуется выбрать случайный вариант однократно, то используется оператор RAND. Но если стоит задача сделать последовательный выбор случайных вариантов из заранее сформированного массива значений, то одним только RAND не обойтись. При каждом последующем выборе нужно будет "помнить", какие значения были уже выбраны.
-
 </p>
 <p>
 Эта задача схожа с последовательным вытягиванием карт из колоды.
-
 </p>
 <p>
 Решение, оформленное в виде пользовательской функции:
-
 </p>
 <div class="Monokai-Code">
-<span class="Monokai-Comment">!&nbsp;Запрашиваем&nbsp;длину&nbsp;массива</span><br>
-_length&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Func">ARRSIZE</span><span class="Monokai-Operator">(</span><span class="Monokai-String">'$random'</span><span class="Monokai-Operator">)</span><br>
-<span class="Monokai-Comment">!&nbsp;Если&nbsp;вариантов&nbsp;уже&nbsp;нет,&nbsp;возвращаем&nbsp;'ERROR'</span><br>
-<span class="Monokai-Koperator">IF</span>&nbsp;_length&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Numeric">0</span><span class="Monokai-Operator">:</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-SysVar">$RESULT</span>&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-String">'ERROR'</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Operator">EXIT</span><br>
-<span class="Monokai-Koperator">END</span><br>
-<br>
-<span class="Monokai-Comment">!&nbsp;Выбираем&nbsp;из&nbsp;массива&nbsp;случайный&nbsp;элемент,&nbsp;соотв.&nbsp;длине&nbsp;массива</span><br>
-_variant&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Func">RAND</span><span class="Monokai-Operator">(</span><span class="Monokai-Numeric">0</span><span class="Monokai-Operator">,</span>&nbsp;_length<span class="Monokai-Operator">-</span><span class="Monokai-Numeric">1</span><span class="Monokai-Operator">)</span><br>
-<span class="Monokai-Comment">!&nbsp;Запоминаем&nbsp;результат</span><br>
-<span class="Monokai-SysVar">$RESULT</span>&nbsp;<span class="Monokai-Operator">=</span>&nbsp;$random<span class="Monokai-Operator">[</span>_variant<span class="Monokai-Operator">]</span><br>
-<br>
-<span class="Monokai-Comment">!&nbsp;Удаляем&nbsp;отработанный&nbsp;элемент</span><br>
-<span class="Monokai-Operator">KILLVAR</span>&nbsp;<span class="Monokai-String">'$random'</span><span class="Monokai-Operator">,</span>&nbsp;_variant<br>
-
-
+<span class="Monokai-Operator"></span><span class="Monokai-Comment">!&nbsp;Запрашиваем&nbsp;длину&nbsp;массива</span><br/>
+_length&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Func">ARRSIZE</span><span class="Monokai-Operator">(</span><span class="Monokai-String">'$random'</span><span class="Monokai-Operator">)</span><span class="Monokai-Operator"><br/>
+</span><span class="Monokai-Comment">!&nbsp;Если&nbsp;вариантов&nbsp;уже&nbsp;нет,&nbsp;возвращаем&nbsp;'ERROR'</span><br/>
+<span class="Monokai-Koperator">IF</span>&nbsp;_length&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Numeric">0</span><span class="Monokai-Operator">:</span><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-SysVar">$RESULT</span>&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-String">'ERROR'</span><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Operator">EXIT</span><br/>
+<span class="Monokai-Koperator">END</span><span class="Monokai-Operator"><br/>
+<br/>
+</span><span class="Monokai-Comment">!&nbsp;Выбираем&nbsp;из&nbsp;массива&nbsp;случайный&nbsp;элемент,&nbsp;соотв.&nbsp;длине&nbsp;массива</span><br/>
+_variant&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Func">RAND</span><span class="Monokai-Operator">(</span><span class="Monokai-Numeric">0</span><span class="Monokai-Operator">,</span>&nbsp;_length<span class="Monokai-Operator">-</span><span class="Monokai-Numeric">1</span><span class="Monokai-Operator">)</span><span class="Monokai-Operator"><br/>
+</span><span class="Monokai-Comment">!&nbsp;Запоминаем&nbsp;результат</span><br/>
+<span class="Monokai-SysVar">$RESULT</span>&nbsp;<span class="Monokai-Operator">=</span>&nbsp;$random<span class="Monokai-Operator">[</span>_variant<span class="Monokai-Operator">]</span><span class="Monokai-Operator"><br/>
+<br/>
+</span><span class="Monokai-Comment">!&nbsp;Удаляем&nbsp;отработанный&nbsp;элемент</span><br/>
+<span class="Monokai-Operator">KILLVAR</span>&nbsp;<span class="Monokai-String">'$random'</span><span class="Monokai-Operator">,</span>&nbsp;_variant<br/>
 </div>
 <p>
 Тестовый пример использования:
-
 </p>
 <div class="Monokai-Code">
-$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">0</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'A'</span><br>
-$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">1</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'B'</span><br>
-$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">2</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'C'</span><br>
-$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">3</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'D'</span><br>
-$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">4</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'E'</span><br>
-$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">5</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'F'</span><br>
-$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">6</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'G'</span><br>
-<br>
-i&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Numeric">1</span><br>
-<span class="Monokai-Markup">:loop</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;$rand_&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Func">FUNC</span><span class="Monokai-Operator">(</span><span class="Monokai-String">'Тянуть&nbsp;карту'</span><span class="Monokai-Operator">)</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-String">'Шаг&nbsp;№&lt;&lt;i&gt;&gt;.&nbsp;Значение:&nbsp;&lt;&lt;$rand_&gt;&gt;'</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;i&nbsp;<span class="Monokai-Operator">=</span>&nbsp;i&nbsp;<span class="Monokai-Operator">+</span>&nbsp;<span class="Monokai-Numeric">1</span><br>
-<span class="Monokai-Koperator">IF</span>&nbsp;i&nbsp;<span class="Monokai-Operator">&lt;</span><span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Numeric">7</span><span class="Monokai-Operator">:</span><br>
-&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Operator">JUMP</span>&nbsp;<span class="Monokai-String">'loop'</span><br>
-<span class="Monokai-Koperator">END</span><br>
-
-
+$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">0</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'A'</span><br/>
+$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">1</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'B'</span><br/>
+$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">2</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'C'</span><br/>
+$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">3</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'D'</span><br/>
+$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">4</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'E'</span><br/>
+$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">5</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'F'</span><br/>
+$random<span class="Monokai-Operator">[</span><span class="Monokai-Numeric">6</span><span class="Monokai-Operator">]</span><span class="Monokai-Operator">=</span><span class="Monokai-String">'G'</span><br/>
+<br/>
+i&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Numeric">1</span><span class="Monokai-Markup"><br/>
+:loop</span><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;$rand_&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Func">FUNC</span><span class="Monokai-Operator">(</span><span class="Monokai-String">'Тянуть&nbsp;карту'</span><span class="Monokai-Operator">)</span><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-String">'Шаг&nbsp;№&lt;&lt;i&gt;&gt;.&nbsp;Значение:&nbsp;&lt;&lt;$rand_&gt;&gt;'</span><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;i&nbsp;<span class="Monokai-Operator">=</span>&nbsp;i&nbsp;<span class="Monokai-Operator">+</span>&nbsp;<span class="Monokai-Numeric">1</span><br/>
+<span class="Monokai-Koperator">IF</span>&nbsp;i&nbsp;<span class="Monokai-Operator">&lt;=</span>&nbsp;<span class="Monokai-Numeric">7</span><span class="Monokai-Operator">:</span><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="Monokai-Operator">JUMP</span>&nbsp;<span class="Monokai-String">'loop'</span><br/>
+<span class="Monokai-Koperator">END</span><br/>
 </div>
 <p>
 <a href="https://qsp.org/attachments/pullcard.qsp" style="text-decoration:none;" class="emFOLD">pullcard.qsp</a>
-
 </p>
 <p>
-АВТОР: NEX   
-
+Автор: `NEX`
 </p>
 <p>
 29.05.2011 20:05
-
 </p>
-<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html" class="emHREFTT">&lt; Назад, к странице 21</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html" class="emHREFTT">Вперёд, к странице 23 &gt;</a></div></div>
+<div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html" class="emHREFTT">&lt; Назад, к странице 23</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/shablony_oformlenija_dlja_igr_0032.html" class="emHREFTT">Вперёд, к странице 25 &gt;</a></div></div>
 <!-- body end -->
             <div class="em_Epigraph">
                 <div class="em_subText">
@@ -106,124 +95,7 @@ i&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Monokai-Numeric
     </div>
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
-<a id="informarch_soderzhanije"></a><h2>Содержание</h2>
-<a id="ъqна"></a><h3>Большой сборник полезных ссылок и закладок</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
-</li>
-</ul>
-<a id="КЯgР"></a><h3>Что такое QSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/informatsija_o_qsp_0002.html#informarch_qspinfo" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
-</li>
-</ul>
-<a id="Ybкф"></a><h3>Общие вопросы и решения</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/lokalizatsija_qsp_0005.html#informarch_localization" style="text-decoration:none;" class="emFOLD">Локализация классического плеера версии 5.7.0</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html#informarch_analyzer_qsp" style="text-decoration:none;" class="emFOLD">Анализатор кода</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
-</li>
-</ul>
-<a id="иbКw"></a><h3>Продвинутый QSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
-</li>
-</ul>
-<a id="Фымy"></a><h3>Работа в текстовом редакторе</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/rabota_v_tekstovom_redaktore_0011.html#informarch_game_in_texteditor" style="text-decoration:none;" class="emFOLD">Пишем QSP-игру в текстовом редакторе</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/preprotsessor_0012.html#informarch_txt2gam_preprocessor" style="text-decoration:none;" class="emFOLD">Использование препроцессора</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
-</li>
-</ul>
-<a id="HБыU"></a><h3>Вопросы по программированию</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/game_time_0015.html#informarch_gametime" style="text-decoration:none;" class="emFOLD">Игровое время (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/gibkij_plejlist_0016.html#informarch_flexible_playlist" style="text-decoration:none;" class="emFOLD">Гибкий плейлист (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html#informarch_usethemassive" style="text-decoration:none;" class="emFOLD">Использование массивов</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/dopolnenie_inventarja_0018.html#informarch_ia_lib_ntropy" style="text-decoration:none;" class="emFOLD">Библиотечка дополняющая инвентарь 0.76</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html#informarch_ifacts" style="text-decoration:none;" class="emFOLD">Действие по условию</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/plavnoe_izmenenie_0020.html#informarch_transformation" style="text-decoration:none;" class="emFOLD">Плавное изменение цвета фона (1.0)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html#informarch_debugger20" style="text-decoration:none;" class="emFOLD">Отладчик 2.0 beta</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
-</li>
-</ul>
-<a id="ХNуA"></a><h3>Обновления плеера</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
-</li>
-</ul>
-<a id="xBfq"></a><h3>Вопросы по AeroQSP</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_instr_0025.html#informarch_aeroqsp_instr" style="text-decoration:none;" class="emFOLD">Инструкция по использованию AeroQSP совместно с Quest Generator</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html#informarch_aeroqsp_help" style="text-decoration:none;" class="emFOLD">Справка по AeroQSP (в дополнение к основной справке QSP)</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_aeroqsp_0027.html#informarch_standalone_aeroqsp" style="text-decoration:none;" class="emFOLD">Stand-alone сборка игр на AeroQSP</a>
-</li>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
-</li>
-</ul>
-<a id="PxцТ"></a><h3>Обзоры игр</h3>
-<ul>
-<li>
-<a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
-</li>
-</ul>
+<header-header></header-header>
         </div>
     </div>
     <script type="text/javascript" src="../res/js/text_replace.js"></script>
